# Seed-to-Atlas-and-RabbitMQ

./: README.md
part_1/: config.ini  main.py  models.py  pyproject.toml  seeds.py
part_2/: config.ini  connect.py  consumer.py  models.py  producer.py  pyproject.toml
