[tool.poetry]
name = "part-1"
version = "0.1.0"
description = ""
authors = ["Oleh Ovchinnikov <112849429+xoka-pro@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "part_1"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
