[tool.poetry]
name = "part-2"
version = "0.1.0"
description = ""
authors = ["Oleh Ovchinnikov <112849429+xoka-pro@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "part_2"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
faker = "17.6.0"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
